--- a/Accueil.html
+++ b/Accueil.html
@@ -28,7 +28,7 @@
             <div class="container-fluid closed" id="home-header">
                 <ul class="container d-flex align-items-center justify-content-between w-100">
                     <a href="index.html" class="active">
-                        <li>HOME</li>
+                        <li>ACCUEIL</li>
                     </a>
                     <a href="#">
                         <li>BOUTIQUE</li>
@@ -55,7 +55,7 @@
                 <ul class="">
                     <img src="assets/logo.png" alt="logo">
                     <a href="#">
-                        <li>HOME</li>
+                        <li>ACCUEIL</li>
                     </a>
                     <a href="#">
                         <li>BOUTIQUE</li>
