--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="hub">
     <div class="logo"></div>
 
-    <a class="hub-btn hub-home" href="#">
+    <a class="hub-btn hub-home" href="Accueil.html">
         <div class="hub-text">
             <b>A</b>CCUEIL
         </div>
