news small done

--- a/Accueil.html
+++ b/Accueil.html
@@ -12,6 +12,7 @@
 
 
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Accueil.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -122,6 +123,54 @@
 
     </header>
 
+    <main class="container-lg">
+
+        <div class="news-line">
+            <div class="news-small">
+                <img src="https://mccisland.net/attachments/new-maps-23-png.3777/" alt="" class="news-small-img">
+                <div class="news-card">
+                    <div class="time">
+                        <h2>03</h2>
+                        <h3>DEC</h3>
+                    </div>
+                    <div class="desc">
+                        <h1>3 Winter MCC Event maps hit the Island!</h1>
+                        <div class="links">
+                            <a class="author" href="#">
+                                <img src="https://xf-cdn.mccisland.net/data/avatars/m/0/51.jpg?1658412010 2x" alt>
+                                <span>soupforeloise</span>
+                            </a>
+                            <a href="#" class="readmore">READ MORE</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="news-small">
+                <img src="https://mccisland.net/attachments/new-maps-23-png.3777/" alt="" class="news-small-img">
+                <div class="news-card">
+                    <div class="time">
+                        <h2>03</h2>
+                        <h3>DEC</h3>
+                    </div>
+                    <div class="desc">
+                        <h1>3 Winter MCC Event maps hit the Island!</h1>
+                        <div class="links">
+                            <a class="author" href="#">
+                                <img src="https://xf-cdn.mccisland.net/data/avatars/m/0/51.jpg?1658412010 2x" alt>
+                                <span>soupforeloise</span>
+                            </a>
+                            <a href="#" class="readmore">READ MORE</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+
+        <div class="news-big"></div>
+    </main>
 
 
 </body>
