--- a/Accueil.html
+++ b/Accueil.html
@@ -169,7 +169,30 @@
         </div>
 
 
-        <div class="news-big"></div>
+        <div class="news-big">
+            <img src="https://mccisland.net/attachments/new-maps-23-png.3777/" alt="" class="news-big-img">
+                <div class="news-card">
+                    <div class="time">
+                        <h2>03</h2>
+                        <h3>DEC</h3>
+                    </div>
+                    <div class="desc">
+                        <h1>3 Winter MCC Event maps hit the Island!</h1>
+                        <div class="links">
+                            <a class="author" href="#">
+                                <img src="https://xf-cdn.mccisland.net/data/avatars/m/0/51.jpg?1658412010 2x" alt>
+                                <span>soupforeloise</span>
+                            </a>
+                            
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="content">
+                    <p class="info">After three years, 27 canon events, three charity events and a whole island, you’d think we’d be satisfied with where we are, but there’s always been something missing. It’s time to change that. The FIRST-EVER MCC merch drop is HERE! We’re launching with three super cool items: the Decision Dome Blueprint Shirt, the Team Mascots Rainbow Shirt, and, just in time for the holiday season, the Team Mascots Holiday Hangers. Click here to go straight to the store, or keep reading below to...</p>
+                    <a href="#" class="readmore">READ MORE</a>
+                </div>
+        </div>
     </main>
 
 
