--- a/Accueil.html
+++ b/Accueil.html
@@ -168,6 +168,8 @@
 
         </div>
 
+        
+
 
         <div class="news-big">
             <img src="https://mccisland.net/attachments/new-maps-23-png.3777/" alt="" class="news-big-img">
@@ -206,12 +208,10 @@
             <h3>Server © 2016-2023. All Rights Reserved.</h3>
             <p>Designed by tjktak1002</p>
         </div>
-        <div>
-            <p>
-                <a href="/terms/checkout">Terms</a> | 
-                <a href="/terms/privacy">Privacy</a> | 
-                <a href="/terms/impressum">Impressum</a>
-            </p>
+        <div class="d-flex justify-content-center align-items-center">
+            <a href="#" target="_blank"><i class="bi bi-twitter"></i></a>
+            <a href="#" target="_blank"><i class="bi bi-youtube"></i></a>
+            <a href="#" target="_blank"><i class="bi bi-instagram"></i></a>
         </div>
     </div>
     </footer>
