--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
         </div>
     </a>
 
-    <a class="hub-btn hub-store" href="#">
+    <a class="hub-btn hub-store" href="404.html">
         <div class="hub-text">
             <b>B</b>OUTIQUE
         </div>
     </a>
 
-    <a href="#" class="hub-btn hub-vote hub-pseudoLink">
+    <a href="404.html" class="hub-btn hub-vote hub-pseudoLink">
         <div class="hub-text">
             <b>V</b>OTER
         </div>
     </a>
 
-    <a href="#" class="hub-btn hub-wiki hub-pseudoLink">
+    <a href="404.html" class="hub-btn hub-wiki hub-pseudoLink">
         <div class="hub-text">
             <b>W</b>IKI
         </div>
