--- a/Accueil.html
+++ b/Accueil.html
@@ -28,19 +28,19 @@
         <div id="header-wrap">
             <div class="container-fluid closed" id="home-header">
                 <ul class="container d-flex align-items-center justify-content-between w-100">
-                    <a href="index.html" class="active">
+                    <a href="Accueil.html" class="active">
                         <li>ACCUEIL</li>
                     </a>
-                    <a href="#">
+                    <a href="404.html">
                         <li>BOUTIQUE</li>
                     </a>
-                    <a href="#">
+                    <a href="404.html">
                         <li>VOTER</li>
                     </a>
-                    <a href="#">
+                    <a href="404.html">
                         <li>ROADMAP</li>
                     </a>
-                    <a href="#">
+                    <a href="404.html">
                         <li>WIKI</li>
                     </a>
                     <a href="javascript:void(0);" id="mbIcon" class="closed">
@@ -55,19 +55,19 @@
             <div id="dh-mb-menu" class="closed">
                 <ul class="">
                     <img src="assets/logo.png" alt="logo">
-                    <a href="#">
+                    <a href="Accueil.html">
                         <li>ACCUEIL</li>
                     </a>
-                    <a href="#">
+                    <a href="404.html">
                         <li>BOUTIQUE</li>
                     </a>
-                    <a href="#">
+                    <a href="404.html">
                         <li>VOTER</li>
                     </a>
-                    <a href="#">
+                    <a href="404.html">
                         <li>ROADMAP</li>
                     </a>
-                    <a href="#">
+                    <a href="404.html">
                         <li>WIKI</li>
                     </a>
                 </ul>
@@ -75,7 +75,7 @@
 
             <div class="hero d-flex justify-content-center align-items-center">
 
-                <a href="#" class="d-flex justify-content-center align-items-center">
+                <a href="404.html" class="d-flex justify-content-center align-items-center">
                     <img src="assets/logo.png" alt="logo" id="logo" class="drop-shadow my-md-5"></a>
             </div>
 
@@ -136,11 +136,11 @@
                     <div class="desc">
                         <h1>3 Winter MCC Event maps hit the Island!</h1>
                         <div class="links">
-                            <a class="author" href="#">
+                            <a class="author" href="404.html">
                                 <img src="https://xf-cdn.mccisland.net/data/avatars/m/0/51.jpg?1658412010 2x" alt>
                                 <span>soupforeloise</span>
                             </a>
-                            <a href="#" class="readmore">READ MORE</a>
+                            <a href="404.html" class="readmore">READ MORE</a>
                         </div>
                     </div>
                 </div>
@@ -156,11 +156,11 @@
                     <div class="desc">
                         <h1>3 Winter MCC Event maps hit the Island!</h1>
                         <div class="links">
-                            <a class="author" href="#">
+                            <a class="author" href="404.html">
                                 <img src="https://xf-cdn.mccisland.net/data/avatars/m/0/51.jpg?1658412010 2x" alt>
                                 <span>soupforeloise</span>
                             </a>
-                            <a href="#" class="readmore">READ MORE</a>
+                            <a href="404.html" class="readmore">READ MORE</a>
                         </div>
                     </div>
                 </div>
@@ -181,7 +181,7 @@
                 <div class="desc">
                     <h1>3 Winter MCC Event maps hit the Island!</h1>
                     <div class="links">
-                        <a class="author" href="#">
+                        <a class="author" href="404.html">
                             <img src="https://xf-cdn.mccisland.net/data/avatars/m/0/51.jpg?1658412010 2x" alt>
                             <span>soupforeloise</span>
                         </a>
@@ -197,7 +197,7 @@
                     Decision Dome Blueprint Shirt, the Team Mascots Rainbow Shirt, and, just in time for the holiday
                     season, the Team Mascots Holiday Hangers. Click here to go straight to the store, or keep reading
                     below to...</p>
-                <a href="#" class="readmore">READ MORE</a>
+                <a href="404.html" class="readmore">READ MORE</a>
             </div>
         </div>
     </main>
@@ -209,9 +209,9 @@
             <p>Designed by tjktak1002</p>
         </div>
         <div class="d-flex justify-content-center align-items-center">
-            <a href="#" target="_blank"><i class="bi bi-twitter"></i></a>
-            <a href="#" target="_blank"><i class="bi bi-youtube"></i></a>
-            <a href="#" target="_blank"><i class="bi bi-instagram"></i></a>
+            <a href="404.html" target="_blank"><i class="bi bi-twitter"></i></a>
+            <a href="404.html" target="_blank"><i class="bi bi-youtube"></i></a>
+            <a href="404.html" target="_blank"><i class="bi bi-instagram"></i></a>
         </div>
     </div>
     </footer>
