--- a/news-0.html
+++ b/news-0.html
@@ -12,15 +12,13 @@
 
 
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="Accueil.css">
+    <link rel="stylesheet" href="news.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-
-    <script src="https://unpkg.com/htmlincludejs"></script>
 
 </head>
 
@@ -30,7 +28,7 @@
         <div id="header-wrap">
             <div class="container-fluid closed" id="home-header">
                 <ul class="container d-flex align-items-center justify-content-between w-100">
-                    <a href="Accueil.html" class="active">
+                    <a href="Accueil.html" class="">
                         <li>ACCUEIL</li>
                     </a>
                     <a href="404.html">
@@ -124,85 +122,47 @@
             </div>
 
     </header>
-
-    <main class="container-lg">
-
-        <div class="news-line">
-            <div class="news-small">
-                <img src="https://mccisland.net/attachments/new-maps-23-png.3777/" alt="" class="news-small-img">
-                <div class="news-card">
-                    <div class="time">
-                        <h2>03</h2>
-                        <h3>DEC</h3>
-                    </div>
-                    <div class="desc">
-                        <h1>3 Winter MCC Event maps hit the Island!</h1>
-                        <div class="links">
-                            <a class="author" href="404.html">
-                                <img src="https://xf-cdn.mccisland.net/data/avatars/m/0/51.jpg?1658412010 2x" alt>
-                                <span>soupforeloise</span>
-                            </a>
-                            <a href="news-0.html" class="readmore">READ MORE</a>
-                        </div>
-                    </div>
-                </div>
+    <div class="container-lg return">
+    <button type="button" onclick="history.go(-1);"><i class="bi bi-caret-left-fill"></i>Retourner</button>
+</div>
+    <main class="news container-lg d-flex">
+        <div class="author col-12 col-md-2">
+            <a class="author-info" href="404.html">
+                <img src="https://xf-cdn.mccisland.net/data/avatars/m/0/51.jpg?1658412010 2x" alt>
+                <div>
+                <span>soupforeloise</span>
+                <p class="rank-moderator rank">MODERATOR</p>
             </div>
-
-            <div class="news-small">
-                <img src="https://mccisland.net/attachments/new-maps-23-png.3777/" alt="" class="news-small-img">
-                <div class="news-card">
-                    <div class="time">
-                        <h2>03</h2>
-                        <h3>DEC</h3>
-                    </div>
-                    <div class="desc">
-                        <h1>3 Winter MCC Event maps hit the Island!</h1>
-                        <div class="links">
-                            <a class="author" href="404.html">
-                                <img src="https://xf-cdn.mccisland.net/data/avatars/m/0/51.jpg?1658412010 2x" alt>
-                                <span>soupforeloise</span>
-                            </a>
-                            <a href="news-0.html" class="readmore">READ MORE</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
+            </a>
+            
         </div>
+        <div class="content col-12 col-md-10">
+            <h1>3 Winter MCC Event maps hit the Island! MCC Island</h1>
+            <br>
+            <img src="https://mccisland.net/attachments/new-maps-23-png.3777/" alt=""/>
+            <br>
+            <br>
+            <p>MCC 28 is done, and with it, MCC Season 2 comes to a close. It's time to pack up the dome, put our feet
+                up and have a lovely long nap until next season…
 
+                Pshh, not a chance. We have an Island to run here!
 
+                The Contestants have had their chance to play these festive maps; now it's your turn to enjoy the fun
+                with three MCC Winter Event maps making their way to MCC Island by Polar Express!
 
-
-        <div class="news-big">
-            <img src="https://mccisland.net/attachments/new-maps-23-png.3777/" alt="" class="news-big-img">
-            <div class="news-card">
-                <div class="time">
-                    <h2>03</h2>
-                    <h3>DEC</h3>
-                </div>
-                <div class="desc">
-                    <h1>3 Winter MCC Event maps hit the Island!</h1>
-                    <div class="links">
-                        <a class="author" href="404.html">
-                            <img src="https://xf-cdn.mccisland.net/data/avatars/m/0/51.jpg?1658412010 2x" alt>
-                            <span>soupforeloise</span>
-                        </a>
-
-                    </div>
-                </div>
-            </div>
-            <hr>
-            <div class="content">
-                <p class="info">After three years, 27 canon events, three charity events and a whole island, you’d think
-                    we’d be satisfied with where we are, but there’s always been something missing. It’s time to change
-                    that. The FIRST-EVER MCC merch drop is HERE! We’re launching with three super cool items: the
-                    Decision Dome Blueprint Shirt, the Team Mascots Rainbow Shirt, and, just in time for the holiday
-                    season, the Team Mascots Holiday Hangers. Click here to go straight to the store, or keep reading
-                    below to...</p>
-                <a href="news-0.html" class="readmore">READ MORE</a>
-            </div>
+                For the first two days of release, they will appear 50% of the time in the map pool for their specific
+                game. After this period, the appearance rate for the maps will go back to normal, and they will stay
+                playable until the end of the Winter event.</p>
+                <br>
+            <h3>Battle Box: Santa’s Slay ⚔️</h3>
+            <br>
+            <img src="https://mccisland.net/attachments/santas_slay_3-jpg.3778/" alt="">
+            <br>
+            <br>
+            <span class="time">DEC 3, 2022  |  2023/01/16</span>
         </div>
     </main>
+
 
     <footer>
         <div class="container footer-wrap d-flex justify-content-between align-items-center">
